# docs/swagger.json
@@ -4,7 +4,38 @@
         "contact": {}
     },
     "paths": {
-        "/api/upload/initialUpload": {
+        "/api/file/download": {
+            "get": {
+                "consumes": [
+                    "application/x-www-form-urlencoded"
+                ],
+                "produces": [
+                    "application/octet-stream"
+                ],
+                "tags": [
+                    "file-api"
+                ],
+                "summary": "下载",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "jwt凭证",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "文件Id",
+                        "name": "fileId",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/api/file/initialUpload": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -44,7 +75,7 @@
                 }
             }
         },
-        "/api/upload/mergePart": {
+        "/api/file/mergePart": {
             "post": {
                 "consumes": [
                     "application/x-www-form-urlencoded"
@@ -78,7 +109,7 @@
                 }
             }
         },
-        "/api/upload/uploadPart": {
+        "/api/file/uploadPart": {
             "patch": {
                 "consumes": [
                     "multipart/form-data"
